feat(gymnasticsTeams.js): Coding Challenge #3

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       JavaScript Logic Exercises 
     </h1>
 
-    <script src="bodyMassIndex.js"></script>
-    
+    <script src="gymnasticsTeams.js"></script>
+
   </body>
 
 </html>
