--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       JavaScript Logic Exercises 
     </h1>
 
-    <script src="gymnasticsTeams.js"></script>
+    <script src="./javaScriptFundamentals/tipCalculator.js"></script>
 
   </body>
 
