feat(footballBetApp.js): Coding Challenge #10

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       JavaScript Logic Exercises 
     </h1>
 
-    <script src="./forecastedMaxTemperatures.js"></script>
+    <script src="./footballBetApp.js"></script>
 
   </body>
 
