feat(dogs.js): Coding Challenge #16

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     JavaScript Logic Exercises
   </h1>
 
-  <script src="./codingChallenges/closureConcept.js"></script>
+  <script src="./codingChallenges/dogs.js"></script>
 
 </body>
 
