refactor(tipCalculator): organizing the code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     JavaScript Logic Exercises
   </h1>
 
-  <script src="./codingChallenges/poll.js"></script>
+  <script src="./codingChallenges/tipCalculator.js"></script>
 
 </body>
 
