--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     JavaScript Logic Exercises
   </h1>
 
-  <script src="./codingChallenges/dogs.js"></script>
+  <script src="./codingChallenges/car.js"></script>
 
 </body>
 
